# cbu_code_sprint

./: .gitattributes  .gitignore  README.md  Start-Windows.bat  Start-macOS.command  pyproject.toml
config/: snippets.json
docs/: OPERATOR_GUIDE.md  PROJECT_SPEC.md
scripts/: build_macos.sh  pyinstaller_entry.py
src/cbu_code_sprint/: __init__.py  __main__.py  app.py  editor.py  locking.py  paths.py  privacy.py  scoring.py  snippets.py  storage.py
tests/: test_core.py  test_gui.py
